test: [033-REFACTOR-UNIT-TEST] 상품등록 Service 테스트 개선 (given절 리팩토링 및 검증 개선)
- seller() 픽스처 메서드의 전달인자로 셀러ID 추가로 명확한 데이터 흐름 표현
- 정책 실행, 상품 캐시 재고 등록 메서드 호출 검증 추가
- 옵션 전달인자 검증을 제거하고 ProductOption과 Product 간의 양방향 연관관계 매핑(assertSame) 검증으로 대체
- Response DTO 중심의 검증에서 캡처된 Product 엔티티의 필드값 검증으로 변경